feat: add kafka
